# travis-windows-test

./: .travis.yml  CMakeLists.txt
cmake/Modules/: FindPerl.cmake
