cmake_minimum_required(VERSION 3.12)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
project(FindPerlTest LANGUAGES)
find_package(Perl REQUIRED)
message(STATUS "PERL_FOUND: ${PERL_FOUND}")
message(STATUS "PERL_EXECUTABLE: ${PERL_EXECUTABLE}")
message(STATUS "PERL_VERSION_STRING: ${PERL_VERSION_STRING}")
